--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ RapidFuzz==3.10.0
 requests==2.32.3
 scikit-image==0.24.0
 scipy==1.14.1
+setuptools==75.1.0
 shapely==2.0.6
 six==1.16.0
 sniffio==1.3.1
